Simulazione servizio piatti ristorante java con suddivisione in classi